Fix:readability of the jumbotron

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,21 @@ blockquote h3{
 
  /*------Media Queries-----*/
 /* For small screens sizes from 600px wide and down */
-@media screen and (max-width: 600px) {
+@media only screen and (min-width: 200px) and (max-width: 767px)  {
+    .navbar-brand{
+        margin-left: 20px;
+        font-size: 1.5em;
+        font-weight: 800;
+        margin-right: 70px;
+    }
+    .jumbotron {
+        color: rgb(139, 177, 5);
+        font-size: 1.5em;
+        font-weight: 800;
+        margin-top: 300px;
+        margin-bottom: 10px;
+        
+    }
 
     .quote {
         margin-top: 70px;
@@ -432,58 +446,15 @@ blockquote h3{
 }
 
 
-/* Media queries */
-
-/* For large to medium screens sizes from 1200px wide and down */
-@media screen and (max-width: 1200px){
-
-    .center {
-        text-align: center;
-        width: 100%;
-    }
-    
-    #socialicon i {
-        margin-top: 50px;
-        color: #3a2c39;
-        margin-right: 50px;
-    }   
-    
-    .rounded-image {
-        margin-top: 50px;
-        align-items: center;
-        justify-content: center;
-        width: 300px;
-        height: 300px;
-        padding: 30px;
-        border-style: solid;
-        border-color: #0b0909;
-        border-width: 1px;
-        border-radius: 50%;
-    }
-
-    .marriage-image {
-        max-width: 300px;
-        max-height: 300px;
-        margin-left: 20px;
-    }
-}
 
 /* For medium screens sizes from 950px wide and down */
-@media screen and (max-width: 950px){
-
-    .callout-container {
-        width:100%;
-        height:auto;
-        background: url("../images/visa2.jpg") no-repeat fixed;
-        display: inline-block;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;  
-        align-items: center;
-        justify-content: center;
+@media screen and (min-width: 768px) and (max-width: 950px){
+    .navbar-brand{
+        margin-left: 20px;
+        font-size: 2em;
+        font-weight: 800;
+        margin-right: 70px;
     }
-
     .center {
         text-align: center;
         width: 100%;
@@ -512,5 +483,44 @@ blockquote h3{
         max-width: 300px;
         max-height: 300px;
         margin-left: 10px;
+    }
+}
+
+/* For large to medium screens sizes from 1200px wide and down */
+@media screen and (mamin-width: 950px)and (max-width: 1200px){
+    .navbar-brand{
+        margin-left: 20px;
+        font-size: 2em;
+        font-weight: 800;
+        margin-right: 70px;
+    }
+    .center {
+        text-align: center;
+        width: 100%;
+    }
+    
+    #socialicon i {
+        margin-top: 50px;
+        color: #3a2c39;
+        margin-right: 50px;
+    }   
+    
+    .rounded-image {
+        margin-top: 50px;
+        align-items: center;
+        justify-content: center;
+        width: 300px;
+        height: 300px;
+        padding: 30px;
+        border-style: solid;
+        border-color: #0b0909;
+        border-width: 1px;
+        border-radius: 50%;
+    }
+
+    .marriage-image {
+        max-width: 300px;
+        max-height: 300px;
+        margin-left: 20px;
     }
 }
